--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-Hotel-BACKEND-server",
+  "name": "React-Hotel-BACKEND",
   "version": "0.0.0",
   "private": true,
   "scripts": {
